# 3dgs-webgpu

./: .gitignore  README.md  SKILL.md  USAGE_GUIDE.md  package.json  publish.md  tsconfig.build.json  tsconfig.json  vite.config.ts  vite.lib.config.ts  vitest.config.ts  项目架构思维导图.md
demo/: index.html  main.ts
gaussian/: clear_points.hlsl  gaussian_common.hlsl  gs_color_point_vs.hlsl  gs_ellipsoid_ps.hlsl  gs_ellipsoid_vs.hlsl  gs_point_gs.hlsl  gs_point_ps.hlsl  gs_point_vs.hlsl  gsplat_crop.hlsl  gsplat_direction.hlsl  gsplat_gs.hlsl  gsplat_gut.frag.hlsl  gsplat_gut.mesh.hlsl  gsplat_intersect.hlsl  gsplat_mlp_combine.hlsl  gsplat_mlp_infer_color.hlsl  gsplat_mlp_infer_opacity.hlsl  gsplat_mlp_infer_scale_rot.hlsl  gsplat_outline.hlsl  gsplat_outline_ps.hlsl  gsplat_pick_ps.hlsl  gsplat_pick_vs.hlsl  gsplat_ps.hlsl  gsplat_reset.hlsl  gsplat_sh.hlsl  gsplat_viewz_cs.hlsl  gsplat_vs.hlsl  prepare_dispatch_args.hlsl  prepare_gut_mesh_args.hlsl  threedgs_covariance.hlsl  threedgut_projection.hlsl
rfs-gsplat-render/: Cargo.toml
rfs-gsplat-render/assets/shaders/: cache_blit.wgsl  gaussian_common.wgsl  gaussian_splat.wgsl  gaussian_splat_cull.wgsl  outline.wgsl  radix_sort.wgsl  selection_compute.wgsl  spherical_harmonics.wgsl  threedgs_covariance.wgsl
rfs-gsplat-render/examples/: pack_mode_example.rs  temporal_coherence_demo.rs  test_alignment_visual.rs  test_gaussian_point_cloud.rs  test_multi_entity.rs  test_radix_sort_validation.rs  test_transform_debug.rs
rfs-gsplat-render/src/: gaussian_point_cloud.rs  gaussian_splats.rs  gpu_picker.rs  lib.rs  loader.rs  outline.rs  radix_sort.rs  splat_state.rs  temporal_coherence.rs  training_preview.rs  wasm_viewer.rs
rfs-gsplat-render/tests/: radix_sort_tests.rs
src/: App.ts  index.ts
src/core/: BoundingBoxRenderer.ts  Camera.ts  OrbitControls.ts  Renderer.ts  ViewportGizmo.ts
src/gs/: GSSplatRenderer.ts  GSSplatRendererMobile.ts  GSSplatRendererV2.ts  GSSplatSorter.ts  GSSplatSorterMobile.ts  GSSplatSorterV2.ts  IGSSplatRenderer.ts  PLYLoader.ts  PLYLoaderMobile.ts  RadixSorter.ts  SplatLoader.ts  TextureCompressor.ts  gs.wgsl  gs_culling.wgsl  gs_sort.wgsl
src/interaction/: GizmoManager.ts
src/loaders/: GLBLoader.ts  MTLParser.test.ts  MTLParser.ts  OBJLoader.test.ts  OBJLoader.ts  OBJParser.test.ts  OBJParser.ts
(+36 files in other folders)
