[package]
name = "rfs-gsplat-render"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["rlib"]

[features]
default = ["native"]
# Native desktop support (includes file I/O with compression and GPU acceleration)
native = ["tinygsplat_io/gpu", "bevy-gpu-prefix-sum", "rayon"]
# WebAssembly standalone viewer support (uses Bevy for rendering)
# Note: tinygsplat_io is included without GPU feature for WASM compatibility
# Using webgpu instead of webgl2 because vertex storage buffers are required
wasm-viewer = ["tinygsplat_io", "wasm-bindgen", "web-sys", "console_error_panic_hook", "wasm-bindgen-futures", "bevy/webgpu"]

[dependencies]
# Bevy dependencies  
bevy = { version = "0.17" }

# WGPU for direct shader management - must match Bevy's version
wgpu = "26.0"

# Math libraries
glam = { version = "0.30", features = ["bytemuck"] }
bytemuck = { version = "1.14", features = ["derive"] }
half = "2.4"  # For f16 support in pack mode

# Utility crates
tracing = "0.1"
pollster = "0.4"
futures = "0.3"

# Parallel processing (optional, not available on wasm)
rayon = { version = "1.10", optional = true }

# I/O crate for Gaussian Splat file formats (optional, not available on wasm)
tinygsplat_io = { path = "../tinygsplat_io", optional = true }

# GPU compute utilities (optional, not available on wasm)
bevy-gpu-prefix-sum = { path = "../bevy-gpu-prefix-sum", optional = true }

# WebAssembly support (optional)
wasm-bindgen = { version = "0.2", optional = true }
wasm-bindgen-futures = { version = "0.4", optional = true }
console_error_panic_hook = { version = "0.1", optional = true }
web-sys = { version = "0.3", optional = true, features = [
    "console",
    "Window",
    "Document",
    "Element",
    "HtmlCanvasElement",
    "Performance",
]}

[dev-dependencies]
rand = "0.8"

[build-dependencies]
# For shader compilation/processing
naga_oil = "0.20"

[target.'cfg(target_arch = "wasm32")'.dependencies]
# Ensure wasm-specific features are available
getrandom = { version = "0.2", features = ["js"] }

# Disable wasm-opt due to crash on Windows
[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[package.metadata.wasm-pack.profile.dev]
wasm-opt = false

